css hover efects added keyframes added for porfolio

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -14,11 +14,11 @@
         </div>
     </div>
     <div class="about-me-txt">
-        <p class="black-font font-size-20 weight-500 margin-0">WHO'S DAVOR?</p> 
-        <div>
+        <p class="black-font font-size-20 weight-500 margin-0 margin-bottom">WHO'S DAVOR?</p>        
+        <div class="h2-img-container">
             <h2 class="black-font font-size-64 weight-700 margin-0">About Me</h2>
             <img src="assets\about_me_img\blue_line.svg" class=""> 
-        </div>
+        </div>     
         <p class="black-font font-size-20 weight-400">
             Hey, I'm Davor. I've always been into tech and software development because 
             I find it exciting how fast everything is evolving. 
@@ -29,6 +29,8 @@
             Coding keeps me curious and driven. There's always something new to learn,
             a new challenge to figure out, and that's what keeps it fun for me.
         </p>
-        <a class="flex-justyfy-align font-size-20 weight-500 pointer">Let's talk</a>
+        <div class="height-48">
+            <a class="flex-justyfy-align font-size-20 weight-500 pointer a-hover">Let's talk</a>
+        </div>      
     </div>
 </section>
