--- a/src/app/headline/headline.component.html
+++ b/src/app/headline/headline.component.html
@@ -2,8 +2,14 @@
     <app-navbar class="navbar-container absolute flex-justyfy-align"></app-navbar>
     <div class="headline-container display-flex absolute column">           
         <div class="display-flex">
-            <div>  
-                <p class="font-size-18 weight-500 flex-justyfy-align white-border">Hello world</p>
+            <div>                 
+            <div class="hover-wrapper">
+                <p class="font-size-18 weight-500 flex-justyfy-align white-border hover-text"></p>
+                <div class="img-container">
+                    <img src="assets/headline_img/waving_hand.svg" class="hover-img" alt="Decorative image" />
+                </div>
+            </div>
+            <div class="width-600">
                 <h1 class="weight-700 margin-0">
                     <span class="hover-lowercase">F</span>
                     <span class="hover-uppercase">r</span>
@@ -13,8 +19,9 @@
                     <span class="hover-uppercase">e</span>
                     <span class="hover-uppercase">n</span>
                     <span class="hover-uppercase">d</span>
-                </h1>   
-            </div> 
+                </h1> 
+            </div>                 
+        </div> 
             <div>
                 <img class="my-photo" src='assets/headline_img/testphoto.png'>
             </div>        
@@ -32,7 +39,7 @@
                 <span class="hover-lowercase">R</span>
             </h1>
         </div>
-        <div class="right display-flex">
+        <div class="right display-flex height-48">
             <a class="white-font font-size-18 weight-500 flex-justyfy-align pointer white-border a-hover"
             href="#contact">Get in Touch</a>
         </div>       
