--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -8,19 +8,25 @@
         <p class="font-size-18 weight-400">Text</p>
     </div>
     <div class="join-container">
-        <img class="img-height pointer" src="assets/project_view_img/upper_part/join_laptop.svg">
+        <div class="image-wrapper">
+            <img class="img-height pointer" src="assets/project_view_img/upper_part/join_laptop.svg" alt="Join App Preview">
+            <a class="hover-link a-hover" href="#">Project details</a>
+        </div>
         <h3 class="font-size-24 weight-700">Join</h3>
         <p class="font-size-18 weight-400">
             Task manager inspired by the Kanban System.
             Create and organize tasks using drag and drop functions,
-            assign users and categories. 
-        </p>
+            assign users and categories.
+        </p>     
     </div>
 </section>
 
 <section class="section-space section-two display-flex">
     <div class="pollo-container">
-        <img class="img-height pointer" src="assets/project_view_img/lower_part/pollo.svg">
+        <div class="image-wrapper">
+            <img class="img-height pointer" src="assets/project_view_img/lower_part/pollo.svg">
+            <a class="hover-link a-hover" href="#">Project details</a>
+        </div>
         <h3 class="font-size-24 weight-700">El Pollo Loco</h3>
         <p class="font-size-18 weight-400">
             Jump, run and throw game based on object-oriented approach.
@@ -28,7 +34,10 @@
         </p>
     </div>
     <div class="bubble-containe">
-        <img class="img-height pointer" src="assets/project_view_img/lower_part/dabubble.svg">
+        <div class="image-wrapper">
+            <img class="img-height pointer" src="assets/project_view_img/lower_part/dabubble.svg">
+            <a class="hover-link a-hover" href="#">Project details</a>
+        </div>
         <h3 class="font-size-24 weight-700">DABubble</h3>
         <p class="font-size-18 weight-400">
             In progress
