--- a/src/app/ready-to-work/ready-to-work.component.html
+++ b/src/app/ready-to-work/ready-to-work.component.html
@@ -16,19 +16,21 @@
                 </div>
             </div> 
             <form class="form-container display-flex column"> 
-
-                <p class="font-size-24 weight-500">What's yout name?</p>
-                <input class="input-info white-font font-size-18" placeholder="Your name goes here" type="text">
-                <div class="yellow-line"></div>
-
-                <p class="font-size-24 weight-500">Whats your email?</p>
-                <input class="input-info white-font font-size-18" placeholder="youremain@email.com" type="text">
-                <div class="yellow-line"></div>
-
-                <p class="font-size-24 weight-500">How can i help you?</p>
-                <input class="input-info white-font font-size-18" placeholder="Hello Davor, I am interested in..." type="text">
-                <div class="yellow-line"></div>
-
+                <div class="hover-form">
+                    <p class="font-size-24 weight-500">What's yout name?</p>
+                    <input class="input-info white-font font-size-18" placeholder="Your name goes here" type="text">
+                    <div class="yellow-line"></div>
+                </div>                
+                <div class="hover-form">
+                    <p class="font-size-24 weight-500">Whats your email?</p>
+                    <input class="input-info white-font font-size-18" placeholder="youremain@email.com" type="text">
+                    <div class="yellow-line"></div>
+                </div>
+                <div class="hover-form">
+                    <p class="font-size-24 weight-500">How can i help you?</p>
+                    <input class="input-info white-font font-size-18" placeholder="Hello Davor, I am interested in..." type="text">
+                    <div class="yellow-line"></div>
+                </div>
                 <div class="agreement-container display-flex column">
                     <div class="disply-flex display-flex">
                         <input class="checkbox pointer" type="checkbox">
