--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,10 +1,34 @@
 <footer>
-    <img src="assets/headline_img/navbar_img/logo_dj.png">
+    <div class="container-one">
+        <img src="assets/headline_img/navbar_img/logo_dj.png">
     <p class="font-size-18 weight-700">Davor Jezernik 2025</p>
-    <div class="hyperling-container display-flex">
+    <div class="line-container"> 
         <a class="white-font font-size-18 weight-700" href="">Legal Notice</a>
-        <a class="white-font font-size-18 weight-700" href="">GitHub</a>
-        <a class="white-font font-size-18 weight-700" href="">LinkedIn</a>
-        <a class="white-font font-size-18 weight-700" href="">Email</a>
+        <div class="hover-line">
+            <img src="assets\headline_img\navbar_img\line_two.svg">
+        </div>
+    </div>
+    </div>
+    <div class="hyperling-container display-flex">
+        <div class="container-two">
+                <div class="link-container">
+                <a class="white-font font-size-18 weight-700 hover-txt" href="">GitHub</a>
+                <div>
+                    <img class="move-1" src="assets/headline_img/github.svg">
+                </div>
+            </div>
+            <div class="link-container">
+                <a class="white-font font-size-18 weight-700 hover-txt" href="">LinkedIn</a>
+                <div>
+                    <img class="move-2" src="assets/headline_img/linkedin.svg">
+                </div>
+            </div>
+            <div class="link-container">
+                <a class="white-font font-size-18 weight-700 hover-txt" href="">Email</a>
+                <div>
+                    <img class="move-3" src="assets/headline_img/mail.svg">
+                </div>
+            </div>
+        </div>   
     </div>
 </footer>
