--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,8 +1,44 @@
 <nav class="display-flex font-size-18 weight-700">
-    <img src="assets\headline_img\navbar_img\logo_dj.png">  
-    <a class="white-font pointer" href="#aboutme">About me</a>
-    <a class="white-font pointer" href="#skills">Skills</a>
-    <a class="white-font pointer" href="#projects">Projects</a>
-    <a class="white-font pointer" href="#contact">Contact</a>
-    <a class="white-font pointer" href="">EN - DE</a>
+    <img src="assets\headline_img\navbar_img\logo_dj.png">
+    <div class="flex-justyfy-align">
+        <a class="white-font pointer" href="#aboutme">About me</a>
+        <div class="circle-container">
+          <img src="assets/headline_img/navbar_img/circle.svg">
+        </div>
+    </div>
+    <div class="flex-justyfy-align"> 
+        <a class="white-font pointer" href="#skills">Skills</a>
+        <div class="line-container">
+            <img src="assets/headline_img/navbar_img/line_one.svg">
+        </div>
+    </div>
+    <div class="flex-justyfy-align">
+        <a class="white-font pointer" href="#projects">Projects</a>
+        <div class="line-container-two">
+            <img src="assets\headline_img\navbar_img\line_two.svg">
+        </div>
+    </div>
+    <div class="flex-justyfy-align">
+        <a class="white-font pointer" href="#contact">Contact</a>
+        <div class="line-container-three">
+            <img src="assets/headline_img/navbar_img/line_three.svg">
+        </div>
+    </div>  
+    <div class="flex-justyfy-align">
+        <div class="flex-justyfy-align">
+            <a class="white-font pointer">EN</a>
+            <div class="toggle-en">
+                <img src="assets/headline_img/navbar_img/toggle.svg">
+            </div>
+        </div>        
+        <div class="flex-justyfy-align slidecontainer">
+            <input type="range" min="1" max="2" class="slider">
+        </div>
+        <div class="flex-justyfy-align">
+            <a class="white-font pointer">DE</a>
+            <div class="toggle-de">
+                <img src="assets/headline_img/navbar_img/toggle.svg">
+            </div>
+        </div>
+    </div>  
 </nav>
