--- a/src/app/skill-set/skill-set.component.html
+++ b/src/app/skill-set/skill-set.component.html
@@ -2,7 +2,8 @@
 <div class="main-container display-flex column">
     <div class="text-container display-flex column">
         <p class="font-size-20 weight-500">MY STACK</p>
-        <div class="h1-decoration flex-justyfy-align">      
+        <div class="h1-decoration flex-justyfy-align">
+            <div class="bg-animation"></div>
             <h1 class="font-size-64 weight-700">Skill set</h1>
         </div>
     </div>
