--- a/src/app/thoughts/thoughts.component.html
+++ b/src/app/thoughts/thoughts.component.html
@@ -1,5 +1,4 @@
 <section>
-
     <div class="flex-justyfy-align">
         <div class="container-one display-flex column">
             <div class="text-img display-flex">
@@ -9,45 +8,39 @@
             <div class='display-flex'>
                 <h2 class="font-size-64 weight-700">Colleagues' Thoughts</h2>
             </div>    
+        </div>
     </div>
-    </div>
-    
-
     <div class="flex-justyfy-align">
-
-        <div class="card-container flex-justyfy-align">
-            
-                <div class="card-one">
-                    
-                    <div class="height">
-                        <div class="card-container-center display-flex">
-                            <div class="width-height display-flex column">
+        <div class="card-container flex-justyfy-align">  
+            <div class="card-one hover-effect">
+            <img class="img-hover" src="assets/thoughts_img/yellow_lines.svg">
+                <div class="height">
+                    <div class="card-container-center display-flex">
+                        <div class="width-height display-flex column">
+                            <div>
+                                <span class="font-size-18 weight-400">
+                                    Karl really kept the team together with his great
+                                    organization and clear communication.
+                                    We wouldn't have got this far without his commitment.
+                                </span>
+                            </div>
+                            <div class="autograph display-flex">
                                 <div>
-                                    <span class="font-size-18 weight-400">
-                                        Karl really kept the team together with his great
-                                         organization and clear communication.
-                                         We wouldn't have got this far without his commitment.
-                                    </span>
+                                    <h4 class="font-size-20 weight-700">Name Surname</h4>
+                                    <p class="font-size-16 weight-500">Developer</p>
                                 </div>
-                                <div class="autograph display-flex">
-                                    <div>
-                                        <h4 class="font-size-20 weight-700">Name Surname</h4>
-                                        <p class="font-size-16 weight-500">Developer</p>
-                                    </div>
-                                    <div class="flex display-flex">
-                                        <img src="assets/thoughts_img/linkdin_svg.svg">
-                                        <a class="font-size-18 weight-500 pointer">Profile</a>
-                                    </div>
+                                <div class="flex display-flex hover-img-txt">
+                                    <img src="assets/thoughts_img/linkdin_svg.svg">
+                                    <a class="font-size-18 weight-500 pointer">Profile</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-                
+                </div>      
             </div>
-            <div class="card-two-container display-flex absolute">
+            <div class="card-two-container display-flex absolute hover-effect">
+                <img class="img-hover" src="assets/thoughts_img/yellow_lines.svg">
                 <div class="card-two">
-
                     <div class="height">
                         <div class="card-container-center display-flex">
                             <div class="width-height display-flex column">
@@ -63,7 +56,7 @@
                                         <h4 class="font-size-20 weight-700">Name Surname</h4>
                                         <p class="font-size-16 weight-500">Developer</p>
                                     </div>
-                                    <div class="flex display-flex">
+                                    <div class="flex display-flex hover-img-txt">
                                         <img src="assets/thoughts_img/linkdin_svg.svg">
                                         <a class="font-size-18 weight-500 pointer">Profile</a>
                                     </div>
@@ -74,7 +67,8 @@
 
                 </div>
             </div>
-            <div class="card-three-container display-flex absolute">
+            <div class="card-three-container display-flex absolute hover-effect">
+                <img class="img-hover" src="assets/thoughts_img/yellow_lines.svg">
                 <div class="card-three">
 
                     <div class="height">
@@ -92,7 +86,7 @@
                                         <h4 class="font-size-20 weight-700">Name Surname</h4>
                                         <p class="font-size-16 weight-500">Developer</p>
                                     </div>
-                                    <div class="flex display-flex">
+                                    <div class="flex display-flex hover-img-txt">
                                         <img src="assets/thoughts_img/linkdin_svg.svg">
                                         <a class="font-size-18 weight-500 pointer">Profile</a>
                                     </div>
@@ -105,7 +99,4 @@
             </div>
         </div>
     </div>
-    
-    
-
 </section>
