--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -3,6 +3,9 @@ section {
     justify-content: space-around;
     align-items: center;
     font-family: 'Poppins';
+    h2 {
+        line-height: 1;
+    }
 }
 
 .img-txt {
@@ -57,9 +60,7 @@ section {
 
 .about-me-txt {
     width: 560px;
-    a {
-        border: 1px solid rgb(0, 0, 0);
-        border-width: 1px 3px 3px 1px;
+    a {   
         width: 132px;
         height: 40px;
         border-radius: 32px;
@@ -67,6 +68,46 @@ section {
     }
 }
 
+.h2-img-container {
+    position: relative; 
+    img {
+    width: 312px;
+    clip-path: inset(0 100% 0 0);  
+    opacity: 0;  
+    animation: drawAndHide 10s infinite;  
+    } 
+    @keyframes drawAndHide {
+    0%, 100% {
+        clip-path: inset(0 100% 0 0);  
+        opacity: 0;  
+    }
+    25%, 75% {
+        clip-path: inset(0 0 0 0);  
+        opacity: 1;  
+    }
+    50% {
+        clip-path: inset(0 0 0 0);  
+        opacity: 1;  
+    }
+    }
+}
+  
+.margin-bottom {
+    margin-bottom: 16px;
+}
 
+.height-48 {
+    height: 48px;
+}
 
+.a-hover {
+    border: 1px solid rgb(0, 0, 0);
+    border-width: 1px 4px 4px 1px;
+}
 
+.a-hover:hover {
+    color: rgb(248, 249, 250);
+    border-width: 1px;
+    background-color: rgb(248, 122, 85);
+    transition: border-width 0.3s ease, border-color 0.3s ease, background-color 0.3s ease;
+}
