--- a/src/app/skill-set/skill-set.component.scss
+++ b/src/app/skill-set/skill-set.component.scss
@@ -19,7 +19,7 @@ section {
 
 .text-container {
     width: 261px;
-    height: 144px;
+    height: 148px;
     margin-bottom: 64px;
     p {
         display: flex;
@@ -32,27 +32,71 @@ section {
 }
 
 .h1-decoration {
+    position: relative;
+    height: 108px;
+    width: 260px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.bg-animation {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 80px;
+    width: 260px;
     background-image: url('./../../../public/assets/skill_set_img/orange_circle.svg');
     background-repeat: no-repeat;
-    height: 108px;
-    width: 261px;
+    background-size: cover;
+    animation: slideLeftRight 4s ease-in-out infinite;
+    z-index: 0;
+}
+
+.h1-decoration h1 {
+    position: relative;
+    z-index: 1;
+}
+
+@keyframes slideLeftRight {
+    0% {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    25% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+    50% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+    75% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
 }
 
 .second-containe {
     justify-content: center;
 }
 
-.img-stack {
-    img {
-        height: 72px;
-        width: 72px;
-    }
+.img-txt img {
+    filter: grayscale(100%);
+    height: 72px;
+    width: 72px;
+    margin: 0px 32px 0px 32px;
+    transition: filter 0.5s ease transform 0.5s;
 }
 
-.img-txt {
-    height: 98px;
-    width: 96px;
-    margin: 0px 16px 40px 16px;
+.img-txt:hover img {
+    filter: grayscale(0%);
+    transform: scale(0.80);
 }
 
 .bigger-width {
@@ -61,7 +105,6 @@ section {
 }
 
 .peel-off {
-    margin: 0px 0px 96px 64px;
+    margin: 0px 0px 45px 64px;
     transform: rotate(8deg);
 }
-
