project view templade addet work needet to make the ts

--- a/src/app/projects/projects-view/projects-view.component.html
+++ b/src/app/projects/projects-view/projects-view.component.html
@@ -1,1 +1,56 @@
-<p>projects-view works!</p>
+<section>
+
+    <app-navbar class="navbar-container absolute flex-justyfy-align"></app-navbar>
+    
+    <div class="content-containe">
+
+        <div>
+            <p>Go Back</p>
+        </div>
+
+        <div>
+            <div class="main-container display-flex">
+            <div>
+                <div>
+                    <div>
+                        <h1>Project name</h1>
+                        <img src="" >
+                    </div>
+                    <div>
+                        <p>Description</p>
+                        <span>
+                            text
+                        </span>
+                    </div>
+                </div>
+                <div>
+                    <p>Implementation Details</p>
+                    <span>
+                        text
+                    </span>
+                </div>
+                <div>
+                    <p>Duration:<span>weeks</span></p>
+                    <div>
+                        <p>Stack</p>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <img src="">
+                <div>
+                    <a href="">Github</a>
+                    <a href="">Live Test</a>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <div>
+            <p>Next Project</p>
+        </div>
+
+    </div>
+
+</section>
