--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <nav class="display-flex font-size-18 weight-700">
     <img src="assets\headline_img\navbar_img\logo_dj.png">
     <div class="flex-justyfy-align">
-        <a class="white-font pointer" href="#aboutme">About me</a>
+        <a class="white-font pointer project-view-color" href="#aboutme">About me</a>
         <div class="circle-container">
           <img src="assets/headline_img/navbar_img/circle.svg">
         </div>
     </div>
     <div class="flex-justyfy-align"> 
-        <a class="white-font pointer" href="#skills">Skills</a>
+        <a class="white-font pointer project-view-color" href="#skills">Skills</a>
         <div class="line-container">
             <img src="assets/headline_img/navbar_img/line_one.svg">
         </div>
