--- a/src/app/projects/project-view/project-view.component.html
+++ b/src/app/projects/project-view/project-view.component.html
@@ -12,8 +12,8 @@
             <div class="main-container display-flex">
             <div>
                 <div>
-                    <div *ngIf="selectedTemplate">
-                        <h1>{{selectedTemplate.name}}</h1>
+                    <div >
+                        <h1>Project name</h1>
                         <img src="" >
                     </div>
                     <div>
