workup data passed correct rendering not working

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,8 +10,7 @@
     <div class="join-container">
         <div class="image-wrapper">
             <img class="img-height pointer" src="assets/project_view_img/upper_part/join_laptop.svg" alt="Join App Preview">
-            <a #templateRefJoin class="hover-link a-hover" href="project-view-route" id="join" (click)="checkID(templateRefJoin)">Project details</a>
-            <app-project-view class="hide" [templateID]="templateID"></app-project-view>      
+            <a #templateRefJoin class="hover-link a-hover" href="project-view-route" id="join" (click)="checkID('join')">Project details</a>     
         </div>
         <h3 class="font-size-24 weight-700">Join</h3>
         <p class="font-size-18 weight-400">
@@ -26,8 +25,7 @@
     <div class="pollo-container">
         <div class="image-wrapper">
             <img class="img-height pointer" src="assets/project_view_img/lower_part/pollo.svg">
-            <a #templateRefPollo class="hover-link a-hover" href="project-view-route" id="pollo" (click)="checkID(templateRefPollo)">Project details</a>
-            <app-project-view class="hide" [templateID]="templateID"></app-project-view>
+            <a #templateRefPollo class="hover-link a-hover" href="project-view-route" id="pollo" (click)="checkID('pollo')">Project details</a>
         </div>
         <h3 class="font-size-24 weight-700">El Pollo Loco</h3>
         <p class="font-size-18 weight-400">
@@ -38,8 +36,7 @@
     <div class="bubble-containe">
         <div class="image-wrapper">
             <img class="img-height pointer" src="assets/project_view_img/lower_part/dabubble.svg">
-            <a #templateRefBubble class="hover-link a-hover" href="project-view-route" id="bubble" (click)="checkID(templateRefBubble)">Project details</a>
-            <app-project-view class="hide" [templateID]="templateID"></app-project-view>
+            <a #templateRefBubble class="hover-link a-hover" href="project-view-route" id="bubble" (click)="checkID('bubble')">Project details</a>
         </div>
         <h3 class="font-size-24 weight-700">DABubble</h3>
         <p class="font-size-18 weight-400">
@@ -47,4 +44,6 @@
         </p>
     </div>
 </section>
+
+<app-project-view class="hide" [templateID]="templateID"></app-project-view> 
 
