--- a/src/app/projects/project-view/project-view.component.html
+++ b/src/app/projects/project-view/project-view.component.html
@@ -13,7 +13,7 @@
             <div>
                 <div>
                     <div >
-                        <h1>Project name</h1>
+                        <h1>{{ selectedProject?.name }}</h1>
                         <img src="" >
                     </div>
                     <div>
